[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperprint"
version = "0.1.1"
description = "Pretty structured printing for Python — colored, framed, never truncated. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrea Tuci", email = "tuci.registrazioni@gmail.com" }]
keywords = ["pretty-print", "logging", "traceback", "console", "ansi", "debug"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AndreaTuci/hyperprint"
Repository = "https://github.com/AndreaTuci/hyperprint"
Issues = "https://github.com/AndreaTuci/hyperprint/issues"

[tool.hatch.build.targets.wheel]
packages = ["hyperprint"]

[tool.hatch.build.targets.sdist]
include = [
    "hyperprint",
    "examples",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
